<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">

        <Preference
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            android:summary="@string/change_language_settings">
            <intent
                android:action="android.settings.LOCALE_SETTINGS"/>
        </Preference>

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_notifications"
            android:key="@string/reminder_key"
            android:title="@string/reminder"
            android:summaryOn="@string/reminder_on"
            android:summaryOff="@string/reminder_off"/>
    </PreferenceCategory>
</PreferenceScreen>