<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".UserActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/image_user"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimas_aldi_candra_s"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_username"
                    android:textColor="@color/white"

                    android:layout_gravity="center"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_marginTop="28dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="60dp"
                    android:paddingEnd="30dp">


                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_baseline_folder_open_24"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/icon_repository"/>

                        <TextView
                            android:id="@+id/tv_repo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/initial_repo"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:layout_marginStart="5dp"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.7"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_baseline_location_on_24"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/icon_location"/>

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/location"
                            android:textSize="17sp"
                            android:layout_marginStart="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.3"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_baseline_business_center_24"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/icon_company"/>

                        <TextView
                            android:id="@+id/tv_company"
                            android:layout_width="wrap_content"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:text="@string/company"
                            android:textSize="17sp"
                            android:layout_marginStart="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:layout_marginTop="20dp"
            app:tabBackground="@drawable/tab_color_selector"
            app:tabTextColor="@color/white"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorDark"
            app:tabSelectedTextColor="@color/colorDark"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>